@@ -1,17 +1,23 @@
+import com.FanHA.mapper.TopicMapper;
 import com.FanHA.pojo.Items;
 import com.FanHA.pojo.Paper;
-import com.FanHA.pojo.Topic.TopicSelect;
+import com.FanHA.pojo.Topic;
+import com.FanHA.service.impl.TopicServiceImpl;
+import com.FanHA.util.SqlSessionFactoryUtils;
+import org.apache.ibatis.session.SqlSession;
+import org.apache.ibatis.session.SqlSessionFactory;
 import org.apache.poi.hssf.usermodel.HSSFRow;
 import org.apache.poi.hssf.usermodel.HSSFSheet;
 import org.apache.poi.hssf.usermodel.HSSFWorkbook;
 import org.apache.poi.ss.usermodel.CellType;
 import org.junit.Test;
 
-import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 
@@ -23,13 +29,13 @@ public class TestTopic {
     @Test
     public void testPaper(){
         Paper paper;
-        SimpleDateFormat format = new SimpleDateFormat("YYYY-MM-dd HH:mm:ss:SSS");
-        TopicSelect topicSelect1 = new TopicSelect("¡°¾ÙÊÀÎÅÃû¡±ÖĞ¡°¾Ù¡±µÄÒâË¼ÊÇ()£¬¡°¾ÙÖØ¡±ÖĞ¡°¾Ù¡±µÄÒâË¼ÊÇ()¡£", 4,
-                 format.format(new Date(System.currentTimeMillis())), new String[]{"ÍùÉÏÍĞ", "È«", "ÍÆ¶¯", "¾Ù¶¯"}, "ÍùÉÏÍÏ");
-        TopicSelect topicSelect2 = new TopicSelect("A: hover said what kind of state in the following text hyperlinks?", 4,
+        SimpleDateFormat format = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss:SSS");
+        Topic topicSelect1 = new Topic("â€œä¸¾ä¸–é—»åâ€ä¸­â€œä¸¾â€çš„æ„æ€æ˜¯()ï¼Œâ€œä¸¾é‡â€ä¸­â€œä¸¾â€çš„æ„æ€æ˜¯()ã€‚", 4,
+                 format.format(new Date(System.currentTimeMillis())), new String[]{"å¾€ä¸Šæ‰˜", "å…¨", "æ¨åŠ¨", "ä¸¾åŠ¨"}, "å¾€ä¸Šæ‹–");
+        Topic topicSelect2 = new Topic("A: hover said what kind of state in the following text hyperlinks?", 4,
                 format.format(new Date(System.currentTimeMillis())), new String[]{"The mouse click", "The mouse without", "The mouse on", "After the visit"}, "The mouse on");
-        Items<TopicSelect> items = new Items<>("select", 10, 2, new TopicSelect[]{topicSelect1, topicSelect2});
-        paper = new Paper("²âÊÔÓÃÀı", 10, 1, 2, 10, new Items[]{items});
+        Items<Topic> items = new Items<>("select", 10, 2, new Topic[]{topicSelect1, topicSelect2});
+        paper = new Paper("æµ‹è¯•ç”¨ä¾‹", 10, 1, 2, 10, new Items[]{items});
         System.out.println(paper);
         System.out.println(items);
         System.out.println(topicSelect1);
@@ -37,30 +43,23 @@ public class TestTopic {
     }
     @Test
     public void testImport(){
-        String rootPath = "C:\\Users\15351\\Desktop";
-        String importOrderDTO = "";
-        Items<TopicSelect> items;
-
-
-        final String SEPA = File.separator;
-        List<TopicSelect> topicSelects = new ArrayList<>();
+        List<Topic> topicSelects = new ArrayList<>();
 
         try {
             String path = "F:\\test.xls";
-            path = java.net.URLDecoder.decode(path, "utf-8");
+            path = java.net.URLDecoder.decode(path, StandardCharsets.UTF_8);
             FileInputStream inputStream = new FileInputStream(path);
             HSSFWorkbook wb = new HSSFWorkbook(inputStream);
             HSSFSheet HSSfSheet = wb.getSheetAt(0);
-            int lastRowNum = HSSfSheet.getLastRowNum();
-            SimpleDateFormat format = new SimpleDateFormat("YYYY-MM-dd HH:mm:ss:SSS");
+            SimpleDateFormat format = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss:SSS");
 
             for (int i = 0; i <= 11; i++){
-                //»ñÈ¡ĞĞ
+                //è·å–è¡Œ
                 HSSFRow row = HSSfSheet.getRow(i);
-                //»ñÈ¡Êı¾İ
+                //è·å–æ•°æ®
                 if (row.getCell(0) == null) continue;
 
-                //ÉèÖÃ±í¸ñÀàĞÍ
+                //è®¾ç½®è¡¨æ ¼ç±»å‹
                 for (int j = 0; j < 5; j++)
                     row.getCell(i).setCellType(CellType.STRING);
                 String title = row.getCell(0).getStringCellValue();
@@ -73,15 +72,62 @@ public class TestTopic {
 
                 int answer = (int) row.getCell(5).getNumericCellValue();
                 String Answer = row.getCell(answer).getStringCellValue();
-                TopicSelect topicSelect =  new TopicSelect(title, 4 , date, options, Answer);
+                Topic topicSelect =  new Topic(title, 4 , date, options, Answer);
                 topicSelects.add(topicSelect);
-                TopicSelect[] array = topicSelects.toArray(new TopicSelect[0]);
+                Topic[] array = topicSelects.toArray(new Topic[0]);
 
-                for (TopicSelect e : array)
+                for (Topic e : array)
                     System.out.println(e);
             }
         } catch (IOException e) {
             throw new RuntimeException(e);
+        }
+    }
+    @Test
+    public void function2(){
+        String title = "A: hover said what kind of state in the following text hyperlinks?";
+        SimpleDateFormat format = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss:SSS");
+        String[] string = new String[]{"The mouse click","The mouse without", "The mouse on", "After the visit"};
+        String answer = "The mouse on";
+        Topic topic = new Topic(title, 4, format.format(System.currentTimeMillis()), string, answer);
+        SqlSessionFactory sqlSessionFactory = SqlSessionFactoryUtils.getSqlSessionFactory();
+        SqlSession sqlSession = sqlSessionFactory.openSession();
+        TopicMapper mapper = sqlSession.getMapper(TopicMapper.class);
+        mapper.insertTopic(topic);
+        sqlSession.commit();
+        int topicId = mapper.getTopicId(topic);
+        topic.setId(topicId);
+        mapper.insertOption(topic);
+        sqlSession.commit();
+        sqlSession.close();
+    }
+    @Test
+    public void TestTopicService(){
+        String path = "C:\\Users\\15351\\Desktop\\test.xls";
+        String type = "select";
+        TopicServiceImpl topicServiceImpl = new TopicServiceImpl();
+        topicServiceImpl.insertTopic(path, type);
+    }
+    @Test
+    public void TestGetTopic(){
+        SqlSessionFactory sqlSessionFactory = SqlSessionFactoryUtils.getSqlSessionFactory();
+        SqlSession sqlSession = sqlSessionFactory.openSession();
+        TopicMapper mapper = sqlSession.getMapper(TopicMapper.class);
+        List<Topic> topics = mapper.selectTopic();
+        for (Topic topic : topics) {
+            List<String> strings = mapper.selectOption(topic.getId());
+            String[] array = strings.toArray(new String[0]);
+            topic.setOptions(array);
+        }
+
+        for (Topic topic : topics) {
+            System.out.print(topic.getId()+".é¢˜ç›®ä¿¡æ¯:");
+            System.out.println(topic);
+            System.out.print(topic.getId()+".é€‰é¡¹ä¿¡æ¯:");
+            System.out.println(Arrays.toString(topic.getOptions()));
+            System.out.print(topic.getId()+".ç­”æ¡ˆä¿¡æ¯:");
+            System.out.println(topic.getAnswer());
+            System.out.println("--------------------");
         }
     }
 }
